# hanzi_origin

./: .gitattributes  LICENSE  README.md  app.js  generate_char_info.py  index.html  pyproject.toml  requirements.txt  style.css
.github/workflows/: pages.yml
data/: char_info.json  chars.json  chars_subset.json  freq_char.txt  radical_map_proposal.json
data/formation_audit/: audit_priority.json  build_notes.js  formation_notes.json  tier1_batch01.json  tier1_batch02.json  tier1_batch03.json  tier1_batch04.json  tier1_batch05.json  tier1_batch06.json  tier1_batch07.json  tier1_batch08.json  tier1_batch09.json  tier1_batch10.json  tier1_batch11.json  tier1_batch12.json  tier1_batch13.json  tier1_batch14.json  tier1_batch15.json  tier1_batch16.json  tier1_batch17.json  tier1_batch18.json  tier1_batch19.json  tier1_batch20.json  tier1_batch21.json  tier1_input_batch01.json  tier1_input_batch02.json  tier1_input_batch03.json  tier1_input_batch04.json  tier1_input_batch05.json  tier1_input_batch06.json  tier1_input_batch07.json  tier1_input_batch08.json  tier1_input_batch09.json  tier1_input_batch10.json  tier1_input_batch11.json  tier1_input_batch12.json  tier1_input_batch13.json  tier1_input_batch14.json  tier1_input_batch15.json  tier1_input_batch16.json  (+5 more)
data/learning_plan/: coh_before.json  embeddings_full.json  embeddings_mvp.json  learning_plan_100chars_5days.json  swap_stats.json  (+13 more)
docs/: formation_audit_plan.md  methodology.md  scheduler_params.md
prompts/: SuggestedAlgo.txt
test/: test_openai_api.py
website/: README.md  app.js  index.html  style.css
(+6642 files in other folders)
