[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzi-origin"
version = "0.1.0"
description = "Utilities for Hanzi origin research."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "vtsen" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
